--- a/OpticalValleyUnite/Classes/UI/Pedometer/Controller/YQPedometerVC.storyboard
+++ b/OpticalValleyUnite/Classes/UI/Pedometer/Controller/YQPedometerVC.storyboard
@@ -41,7 +41,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4Op-ly-kcj">
-                                <rect key="frame" x="0.0" y="264" width="375" height="403"/>
+                                <rect key="frame" x="0.0" y="314" width="375" height="353"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="D6u-bk-GSU" id="aYr-ln-uOh"/>
@@ -49,29 +49,29 @@
                                 </connections>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cv4-FQ-OF4">
-                                <rect key="frame" x="0.0" y="64" width="375" height="200"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="250"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="feidu" translatesAutoresizingMaskIntoConstraints="NO" id="fMM-oI-Zf5">
-                                        <rect key="frame" x="97" y="10" width="180" height="180"/>
+                                        <rect key="frame" x="112" y="40" width="150" height="150"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="180" id="msu-tc-eQe"/>
-                                            <constraint firstAttribute="width" constant="180" id="nCQ-pD-MsA"/>
+                                            <constraint firstAttribute="height" constant="150" id="msu-tc-eQe"/>
+                                            <constraint firstAttribute="width" constant="150" id="nCQ-pD-MsA"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="今日步数" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vCy-ow-dsM">
-                                        <rect key="frame" x="153" y="94.5" width="69.5" height="21"/>
+                                        <rect key="frame" x="153" y="119.5" width="69.5" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ccf-OU-N7l">
-                                        <rect key="frame" x="157" y="59.5" width="61" height="30"/>
+                                        <rect key="frame" x="157" y="84.5" width="61" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="afI-4t-XNC">
-                                        <rect key="frame" x="0.0" y="150" width="375" height="45"/>
+                                        <rect key="frame" x="0.0" y="200" width="375" height="45"/>
                                         <subviews>
                                             <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eRc-Kf-xUU">
                                                 <rect key="frame" x="0.0" y="0.0" width="125" height="45"/>
@@ -157,12 +157,12 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="vCy-ow-dsM" firstAttribute="top" secondItem="ccf-OU-N7l" secondAttribute="bottom" constant="5" id="1Ur-1R-D4J"/>
-                                    <constraint firstAttribute="height" constant="200" id="3jj-M3-0em"/>
+                                    <constraint firstAttribute="height" constant="250" id="3jj-M3-0em"/>
                                     <constraint firstItem="vCy-ow-dsM" firstAttribute="centerX" secondItem="Cv4-FQ-OF4" secondAttribute="centerX" id="AY5-1z-Cjt"/>
                                     <constraint firstItem="fMM-oI-Zf5" firstAttribute="centerX" secondItem="Cv4-FQ-OF4" secondAttribute="centerX" id="GA2-3t-QUW"/>
                                     <constraint firstItem="vCy-ow-dsM" firstAttribute="centerY" secondItem="Cv4-FQ-OF4" secondAttribute="centerY" constant="5" id="Ubn-bg-PcU"/>
                                     <constraint firstItem="afI-4t-XNC" firstAttribute="leading" secondItem="Cv4-FQ-OF4" secondAttribute="leading" id="YST-SR-56d"/>
-                                    <constraint firstItem="fMM-oI-Zf5" firstAttribute="centerY" secondItem="Cv4-FQ-OF4" secondAttribute="centerY" id="d8F-9U-1tb"/>
+                                    <constraint firstItem="fMM-oI-Zf5" firstAttribute="centerY" secondItem="Cv4-FQ-OF4" secondAttribute="centerY" constant="-10" id="d8F-9U-1tb"/>
                                     <constraint firstAttribute="trailing" secondItem="afI-4t-XNC" secondAttribute="trailing" id="k63-qY-ZgV"/>
                                     <constraint firstAttribute="bottom" secondItem="afI-4t-XNC" secondAttribute="bottom" constant="5" id="oPd-rN-qKK"/>
                                     <constraint firstItem="ccf-OU-N7l" firstAttribute="centerX" secondItem="Cv4-FQ-OF4" secondAttribute="centerX" id="s0k-Q9-HLU"/>
